--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>My github website</h1>
-    <h3>second changes</h3>
+
+    <h3>second changes + not changes</h3>
 </body>
 </html>
