--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>My github website</h1>
 
-    <h3>second changes + not changes</h3>
+    <h3>second changes + not changes i am a ghost</h3>
 </body>
 </html>
